Clean the commit log

--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -21,14 +21,11 @@ jobs:
         setup-command: ''
         command: javac -cp utilities/antlr-4.13.1-complete.jar -d out $(find src gen
           -name "*.java") && java -cp out:utilities/antlr-4.13.1-complete.jar SimpleLang
-          tests/01-func.cpy
+          tests/01-func.cpy | sort -t':' -k1.6n -k2
         input: ''
-        expected-output: |
-          ####Statements####
-          func foo: 1
-          func main: 2
-
-          ####Expressions####
+        expected-output: |-
+          Line 1: Stmt function foo = 1
+          Line 5: Stmt function main = 1
         comparison-method: contains
         timeout: 10
         max-score: 1
@@ -40,14 +37,11 @@ jobs:
         setup-command: ''
         command: javac -cp utilities/antlr-4.13.1-complete.jar -d out $(find src gen
           -name "*.java") && java -cp out:utilities/antlr-4.13.1-complete.jar SimpleLang
-          tests/02-for.cpy
+          tests/02-for.cpy | sort -t':' -k1.6n -k2
         input: ''
-        expected-output: |
-          ####Statements####
-          func main: 2
-          for: 2
-
-          ####Expressions####
+        expected-output: |-
+          Line 1: Stmt function main = 1
+          Line 2: Stmt for = 2
         comparison-method: contains
         timeout: 10
         max-score: 1
@@ -59,14 +53,15 @@ jobs:
         setup-command: ''
         command: javac -cp utilities/antlr-4.13.1-complete.jar -d out $(find src gen
           -name "*.java") && java -cp out:utilities/antlr-4.13.1-complete.jar SimpleLang
-          tests/03-if.cpy
+          tests/03-if.cpy | sort -t':' -k1.6n -k2
         input: ''
-        expected-output: |
-          ####Statements####
-          func main: 4
-          if: 1 2 3
-
-          ####Expressions####
+        expected-output: |-
+          Line 1: Stmt function main = 1
+          Line 2: Expr 1
+          Line 2: Stmt selection = 1
+          Line 4: Expr 0
+          Line 4: Stmt selection = 2
+          Line 7: Stmt selection = 3
         comparison-method: contains
         timeout: 10
         max-score: 1
@@ -78,14 +73,13 @@ jobs:
         setup-command: ''
         command: javac -cp utilities/antlr-4.13.1-complete.jar -d out $(find src gen
           -name "*.java") && java -cp out:utilities/antlr-4.13.1-complete.jar SimpleLang
-          tests/04-while.cpy
+          tests/04-while.cpy | sort -t':' -k1.6n -k2
         input: ''
-        expected-output: |
-          ####Statements####
-          func main: 2
-          while: 2
-
-          ####Expressions####
+        expected-output: |-
+          Line 1: Stmt function main = 2
+          Line 2: Expr 1
+          Line 2: Stmt while = 2
+          Line 6: Expr 0
         comparison-method: contains
         timeout: 10
         max-score: 1
@@ -97,16 +91,17 @@ jobs:
         setup-command: ''
         command: javac -cp utilities/antlr-4.13.1-complete.jar -d out $(find src gen
           -name "*.java") && java -cp out:utilities/antlr-4.13.1-complete.jar SimpleLang
-          tests/05-nested.cpy
+          tests/05-nested.cpy | sort -t':' -k1.6n -k2
         input: ''
-        expected-output: |
-          ####Statements####
-          func main: 2
-          for: 5
-          if: 1 2 3
-          while: 0
-
-          ####Expressions####
+        expected-output: |-
+          Line 1: Stmt function main = 2
+          Line 2: Stmt for = 3
+          Line 5: Expr 1
+          Line 5: Stmt selection = 1
+          Line 7: Expr 0
+          Line 7: Stmt selection = 2
+          Line 10: Stmt selection = 3
+          Line 16: Expr 0
         comparison-method: contains
         timeout: 10
         max-score: 1
@@ -118,14 +113,13 @@ jobs:
         setup-command: ''
         command: javac -cp utilities/antlr-4.13.1-complete.jar -d out $(find src gen
           -name "*.java") && java -cp out:utilities/antlr-4.13.1-complete.jar SimpleLang
-          tests/06-binery_exp.cpy
+          tests/06-binery_exp.cpy | sort -t':' -k1.6n -k2
         input: ''
         expected-output: |-
-          ####Statements####
-          func main: 3
-
-          ####Expressions####
-          +: 1
+          Line 1: Stmt function main = 3
+          Line 2: Expr 5
+          Line 3: Expr +
+          Line 4: Expr 0
         comparison-method: contains
         timeout: 10
         max-score: 1
@@ -137,14 +131,13 @@ jobs:
         setup-command: ''
         command: javac -cp utilities/antlr-4.13.1-complete.jar -d out $(find src gen
           -name "*.java") && java -cp out:utilities/antlr-4.13.1-complete.jar SimpleLang
-          tests/07-unery_exp.cpy
+          tests/07-unery_exp.cpy | sort -t':' -k1.6n -k2
         input: ''
         expected-output: |-
-          ####Statements####
-          func main: 3
-
-          ####Expressions####
-          ++: 1
+          Line 1: Stmt function main = 3
+          Line 2: Expr 5
+          Line 3: Expr ++
+          Line 4: Expr 0
         comparison-method: contains
         timeout: 10
         max-score: 1
@@ -156,14 +149,13 @@ jobs:
         setup-command: ''
         command: javac -cp utilities/antlr-4.13.1-complete.jar -d out $(find src gen
           -name "*.java") && java -cp out:utilities/antlr-4.13.1-complete.jar SimpleLang
-          tests/08-binery_exp2.cpy
+          tests/08-binery_exp2.cpy | sort -t':' -k1.6n -k2
         input: ''
         expected-output: |-
-          ####Statements####
-          func main: 3
-
-          ####Expressions####
-          +=: 1
+          Line 1: Stmt function main = 3
+          Line 2: Expr 5
+          Line 3: Expr +=
+          Line 4: Expr 0
         comparison-method: contains
         timeout: 10
         max-score: 1
@@ -175,15 +167,13 @@ jobs:
         setup-command: ''
         command: javac -cp utilities/antlr-4.13.1-complete.jar -d out $(find src gen
           -name "*.java") && java -cp out:utilities/antlr-4.13.1-complete.jar SimpleLang
-          tests/09-binery_exp_long.cpy
+          tests/09-binery_exp_long.cpy | sort -t':' -k1.6n -k2
         input: ''
         expected-output: |-
-          ####Statements####
-          func main: 3
-
-          ####Expressions####
-          +: 2
-          -: 1
+          Line 1: Stmt function main = 3
+          Line 2: Expr 5
+          Line 3: Expr =
+          Line 4: Expr 0
         comparison-method: contains
         timeout: 10
         max-score: 1
@@ -195,20 +185,13 @@ jobs:
         setup-command: ''
         command: javac -cp utilities/antlr-4.13.1-complete.jar -d out $(find src gen
           -name "*.java") && java -cp out:utilities/antlr-4.13.1-complete.jar SimpleLang
-          tests/10-mix_exp.cpy
+          tests/10-mix_exp.cpy | sort -t':' -k1.6n -k2
         input: ''
         expected-output: |-
-          ####Statements####
-          func main: 3
-
-          ####Expressions####
-          *=: 5
-          -: 4
-          +: 3
-          ++: 1
-          *: 2
-          --: 1
-          +=: 1
+          Line 1: Stmt function main = 3
+          Line 2: Expr ,
+          Line 3: Expr *=
+          Line 4: Expr +=
         comparison-method: contains
         timeout: 10
         max-score: 1
@@ -220,25 +203,30 @@ jobs:
         setup-command: ''
         command: javac -cp utilities/antlr-4.13.1-complete.jar -d out $(find src gen
           -name "*.java") && java -cp out:utilities/antlr-4.13.1-complete.jar SimpleLang
-          tests/11-program.cpy
+          tests/11-program.cpy | sort -t':' -k1.6n -k2
         input: ''
         expected-output: |-
-          ####Statements####
-          func reverseNumber: 3
-          while: 2
-          func main: 8
-          if: 2
-          if: 1 1
-
-          ####Expressions####
-          >: 1
-          +: 2
-          *: 1
-          %: 1
-          /=: 1
-          &: 1
-          <: 1
-          ==: 1
+          Line 2: Stmt function reverseNumber = 3
+          Line 3: Expr 0
+          Line 4: Expr >
+          Line 4: Stmt while = 2
+          Line 5: Expr =
+          Line 6: Expr /=
+          Line 8: Expr reversedNum
+          Line 11: Stmt function main = 8
+          Line 15: Expr printf
+          Line 16: Expr scanf
+          Line 19: Expr <
+          Line 19: Stmt selection = 2
+          Line 20: Expr printf
+          Line 21: Expr 0
+          Line 25: Expr reverseNumber
+          Line 26: Expr ==
+          Line 26: Stmt selection = 1
+          Line 27: Expr printf
+          Line 28: Stmt selection = 1
+          Line 29: Expr printf
+          Line 32: Expr 0
         comparison-method: contains
         timeout: 10
     - name: Autograding Reporter
